# daily-tasks

./: CHANGELOG.md  pyproject.toml  q
.github/workflows/: bumpversion.yml  ci.yml
mysite/: db.sqlite3
mysite/myapp/: admin.py  forms.py  models.py  serializers.py  t.py  views.py
mysite/myapp/migrations/: 0001_initial.py  0002_task_date.py  0003_auto_20201129_0125.py  0004_auto_20201129_0132.py  0005_auto_20201129_0135.py  0006_auto_20201129_0234.py
mysite/myapp/static/myapp/: index_style.css
mysite/myapp/templates/myapp/: add.html  base.html  classdelete.html  classupdate.html  detail.html  edit.html  index.html
mysite/mysite/: settings.py  urls.py
