[tool.poetry]
name = "your-project"
version = "0.0.1"
description = "daily task tracker"
authors = [
    "Shashank Mishra <shashank.mishra@betterworks.com>",
]
[tool.semantic_release]
version_variable = [
    "src_folder/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
